# affordancebench-studio

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: linux-smoke.yml  pages.yml
affordbench/: __init__.py  cli.py  legacy.py  paths.py
affordbench/legacy_scripts/: affordbench_env_check.py  drive_download_resume.py  eval_ablation_bc_risk_subset.py  (+27 more)
docs/: architecture.md  command_reference.md  extending_bridge.md  index.html  index.md  quickstart.md  reproducibility.md
examples/: README.md  demo_openad_profile_walkthrough.sh  demo_simulation_reviewer_walkthrough.sh  demo_smoke_walkthrough.sh
runtime_shims/: torch_cluster.py
submission/: README.md  acceptance_maximization_plan.md  clean_venv_build_evidence_20260411.md  demo_walkthrough.md  final_fill_ins.md  final_freeze_20260412.md  final_submission_rehearsal_20260411.md  github_homepage_copy.md  local_dry_run_evidence_20260411.md  official_requirements_check.md  openreview_actual_submission_20260412.md  openreview_checklist.md  openreview_public_entry_check_20260411.md  oss_benchmark_gap_analysis_20260411.md  overview_paper_outline.md  pdf_visual_check_20260411.md  project_page_template.md  public_main_fresh_clone_build_evidence_20260412.md  reject_style_reviewer_rebuttal_20260412.md  remote_laso_heatmap_smoke_evidence_20260411.md  remote_openad_smoke_evidence_20260411.md  review_alignment.md  smoke_evidence_template.md  source_zip_build_evidence_20260411.md  source_zip_checklist.md  strict_reviewer_pass_20260412.md  supplementary_zip_file_list.md
(+18 files in other folders)
